# destination-discovery-mcp

./: .gitignore  LICENSE  README.md  label_manager.py  main.py  mcp_server.py  pyproject.toml  requirements.txt  search_demo.py  test_tags.json
tests/: test_basic.py
